--- a/src/index.css
+++ b/src/index.css
@@ -283,11 +283,15 @@ i[class*="van-type-"] {
 /***** FOOTER *****/
 
 footer {
+  background-color: #161616;
+  color: #aaaaaa;
+  height: 74px;
   display: flex;
+  flex-shrink: 0;
+  justify-content: center;
   align-items: center;
   margin-top: auto;
-  padding: 20px;
-  background-color: #252525;
+  font-weight: 500;
 }
 footer span {
   text-align: center;
@@ -315,4 +319,10 @@ section {
   color: #161616;
   font-weight: 700;
   text-decoration-line: underline;
+}
+
+.site-wrapper {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
