--- a/src/index.css
+++ b/src/index.css
@@ -117,7 +117,6 @@ header a:hover:not(:first-child) {
 }
 
 .about-page-content {
-  padding-inline: 23px;
   color: #161616;
   margin-bottom: 55px;
 }
@@ -151,7 +150,6 @@ header a:hover:not(:first-child) {
 }
 /**** VANS PAGE *****/
 .van-list-container {
-  padding-inline: 23px;
 }
 
 .van-list {
@@ -176,11 +174,10 @@ header a:hover:not(:first-child) {
   margin-right: 20px;
   cursor: pointer;
 }
-
 .van-type {
-  height: 34px;
-  padding-block: 6px;
-  padding-inline: 26px;
+  height: 2rem;
+  padding-block: 0.5rem;
+  padding-inline: 1.75rem;
   font-style: normal;
   font-weight: 500;
   border: none;
@@ -189,7 +186,6 @@ header a:hover:not(:first-child) {
   color: #4d4d4d;
   transition: 200ms all cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .van-type:hover {
   color: #ffead0;
 }
@@ -217,6 +213,19 @@ header a:hover:not(:first-child) {
   background-color: #161616;
 }
 
+.vans-loader-container {
+  position: relative;
+  z-index: 1;
+}
+.vans-loader-container .dot-flashing {
+  position: absolute;
+  top: 50%;
+  right: 50%;
+  z-index: 3;
+}
+.van-price:has(.react-loading-skeleton) {
+  margin: 0;
+}
 .van-type.clear-filters {
   margin-left: -20px;
   height: 34px;
@@ -241,11 +250,10 @@ i[class*="van-type-"] {
 
 .van-detail-container .back-button {
   color: black;
-  text-decoration: none;
-}
-
-.van-detail-container .back-button span {
   text-decoration: underline;
+  font-size: 1.1rem;
+  margin-bottom: 1rem;
+  font-weight: 500;
 }
 
 .van-detail {
@@ -253,15 +261,21 @@ i[class*="van-type-"] {
   flex-direction: column;
   color: #161616;
 }
-
 .van-detail img {
-  border-radius: 5px;
   margin-block: 47px;
+  border-radius: 5px;
+}
+.van-detail .loader-container {
+  margin-block: 47px;
+  border-radius: 5px;
+  padding: 25%;
+  background-color: #ebebeb;
 }
 
 .van-detail h2 {
   font-size: 2rem;
   margin-bottom: 10px;
+  margin-top: 1rem;
 }
 
 .van-detail > i {
@@ -284,6 +298,117 @@ i[class*="van-type-"] {
   font-size: 1.125rem;
 }
 
+/*** HOST VAN DETAIL PAGE ***/
+
+.host-van-detail-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.host-van-detail-container .back-button {
+  color: black;
+  text-decoration: underline;
+  font-size: 1.1rem;
+  margin-bottom: 1rem;
+  font-weight: 500;
+}
+.host-van-detail {
+  display: flex;
+  flex-direction: row;
+  gap: 2rem;
+  align-items: center;
+  background-color: white;
+}
+.host-van-detail-nav {
+  display: flex;
+  margin-block: 25px;
+}
+
+.host-van-detail-nav a {
+  text-decoration: none;
+  color: #4d4d4d;
+  font-weight: 500;
+  padding: 5px 20px;
+}
+.host-van-detail-nav a.active,
+.host-van-detail-nav a:hover {
+  font-weight: bold;
+  text-decoration: underline;
+  color: #161616;
+}
+
+.host-van-detail img {
+  border-radius: 5px;
+  max-width: 25%;
+}
+.host-van-info {
+  display: flex;
+  flex-direction: column;
+  color: #161616;
+}
+
+.host-van-info .loader-container {
+  margin-block: 47px;
+  border-radius: 5px;
+  padding: 25%;
+  background-color: #ebebeb;
+}
+
+.host-van-info h2 {
+  font-size: 2rem;
+  margin-bottom: 10px;
+  margin-top: 1rem;
+}
+
+.host-van-info > i {
+  align-self: flex-start;
+}
+
+.host-van-info .van-price {
+  font-size: 1.25rem;
+  margin-bottom: 10px;
+}
+
+.host-van-info .van-price span {
+  font-weight: 700;
+  font-size: 1.5rem;
+}
+
+.host-van-info .link-button {
+  background-color: #ff8c38;
+  color: white;
+  font-size: 1.125rem;
+}
+
+/**** HOST VANS PAGE *****/
+.host-van-list {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.host-van-tile a {
+  display: flex;
+  align-items: center;
+  padding: 1.5rem;
+  gap: 1.25rem;
+  color: #161616;
+  background-color: #fff;
+  border-radius: 5px;
+  text-decoration: none;
+}
+.host-van-tile a .van-info p {
+  font-size: 1.25rem;
+}
+.host-van-tile a img {
+  height: auto;
+  border-radius: 5px;
+  max-width: 25%;
+}
+
+.host-van-tile a .vans-loader-container img {
+  height: auto;
+  border-radius: 5px;
+}
 /***** FOOTER *****/
 
 footer {
@@ -306,6 +431,7 @@ footer span {
 
 section {
   margin-block: 25px;
+  margin-inline: 23px;
 }
 
 .host-nav {
