--- a/src/index.css
+++ b/src/index.css
@@ -346,7 +346,22 @@ i[class*="van-type-"] {
   flex-direction: column;
   color: #161616;
 }
-
+.host-van-detail-info > h4 {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 21px;
+}
+.host-van-detail-info > h4 > span {
+  font-weight: 500;
+}
+.host-van-detail-image {
+  height: 100px;
+  border-radius: 5px;
+}
+.host-van-price {
+  font-size: 24px;
+  font-weight: 500;
+}
 .host-van-info .loader-container {
   margin-block: 47px;
   border-radius: 5px;
